Adding my sample placeholder

--- a/index.html
+++ b/index.html
@@ -1,3 +1,30 @@
-Hello All!
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="css/common.css" />
+<script type="text/javascript" src="js/common.js"></script>
 
-Ok fine.
+<link rel="stylesheet" type="text/css" href="css/pritam.css" />
+<script type="text/javascript" src="js/pritam.js"></script>
+
+</head>
+<body onload="init()">
+	<h1 id="header">This is common heading.</h1>
+	<div id="pritam" class="box">
+		<div class="PH-header">Pritam Gudekar</div>
+		<div class="marginTop10">
+			Name: Pritam <br>
+			Age: 33		
+		</div>
+		<button class="marginTop10" onclick="showmyname()">Show</button>
+	</div>
+	<!-- 
+	 - Follow below div template to create your own div placeholder below above #pritam div folder
+	 - Inside this placeholder, add your bio-data with different colors and style (any). You can add any calculations with javascript as well. Its open to you
+	 - Create your own name .css or .js files in respective css and js folders, include in this file. e.g. css/pritam.css or js/pritam.js
+	#Template is below	
+	<div id="<your-name>" class="box">
+		<div class="PH-header">Your-name</div>
+	</div>	
+	 -->
+</body>
+</html>
