changes in index.html and common.css file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body onload="init()">
 	<h1 id="header">This is common heading.</h1>
+
 	<div id="pritam" class="box">
 		<div class="PH-header">Pritam Gudekar</div>
 		<div class="marginTop10">
@@ -17,6 +18,18 @@
 		</div>
 		<button class="marginTop10" onclick="showmyname()">Show</button>
 	</div>
+
+	<div id="Rushi" class="box">
+		<div class="h-name">  Rushikesh Deshmukh  </div>
+		<div class="marginTop10">
+			    Name: Rushikesh Deshmukh <br>
+			    Age: 23		
+		            Contact Number :9766977443
+		</div>
+		
+	</div>	
+
+
 	<!-- 
 	 - Follow below div template to create your own div placeholder below above #pritam div folder
 	 - Inside this placeholder, add your bio-data with different colors and style (any). You can add any calculations with javascript as well. Its open to you
