Hi again committed at master by rahul

--- a/index.html
+++ b/index.html
@@ -29,6 +29,60 @@
 
 
 
+
+<div id="d1">
+<form>
+<fieldset>
+<legend>Create Your Profile</legend>
+
+	
+		<label>Name</label>
+	
+	
+		<input type="text"\>
+	
+
+                <label>User Name</label>
+	
+	
+		<input type="text"\>
+                <label>Password</label>
+	
+	
+		<input type="text"\>
+                 <label>Email</label>
+	
+	
+		<input type="text"\>
+                <label>Date Of Birth</label>
+	
+	
+		<input type="text"\>
+
+		<label>Nick Name</label>
+	
+	
+		<input type="text"\>
+	
+
+
+	
+		<label>Mobile Number</label>
+	
+	<input type="text"\><br\>
+<input type="checkbox"\>I accept the terms and condition<br>
+<img src="tec.jpg" width=150px height=50px>
+<label>Enter Captcha</label>
+	
+	
+		<input type="text"\>
+<input type="submit" value="Submit"\>
+
+</fieldset>
+</form>
+<div>
+
+
 Hiii this is rahul and i am changing something in this file
 </body>
 </html>
