--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 <link rel="stylesheet" type="text/css" href="css/pritam.css" />
 <script type="text/javascript" src="js/pritam.js"></script>
 
+
+
+
+
+
 </head>
 <body onload="init()">
 	<h1 id="header">This is common heading.</h1>
@@ -26,8 +31,18 @@
 		<div class="PH-header">Your-name</div>
 	</div>	
 	 -->
+<link rel="stylesheet" type="text/css" href="css/suyash.css" />
+<script type="text/javascript" src="js/suyash.js"></script>
 
 
+<div id="suyash" class="box">
+		<div class="PH-header">Suyash Thite</div>
+		<div class="marginTop10">
+			Name: Suyash <br>
+			Age: 21		
+		</div>
+		<button class="marginTop10" onclick="showmyname()">Show</button>
+	</div>
 
 Hiii this is rahul and i am changing something in this file
 </body>
