Prashant added own div element on index page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <link rel="stylesheet" type="text/css" href="css/pritam.css" />
 <script type="text/javascript" src="js/pritam.js"></script>
 
+<link rel="stylesheet" type="text/css" href="css/pritam.css" />
+<script type="text/javascript" src="js/prashant.js"></script>
+
 
 
 
@@ -34,6 +37,15 @@
 		
 	</div>	
 
+
+	<div id="prashant" class="box">
+		<div class="h-name">  Prashant Nisal  </div>
+		<div class="marginTop10">
+			    Name:Prashant <br>
+			    Age: 23		
+		</div>
+		<button class="marginTop10" onclick="showmydetails()">Show</button>
+	</div>
 
 	<!-- 
 	 - Follow below div template to create your own div placeholder below above #pritam div folder
