change my name from lower to upper case

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
 	<div id="prashant" class="box">
-		<div class="h-name">  Prashant Nisal  </div>
+		<div class="h-name">  PRASHANT NISAL  </div>
 		<div class="marginTop10">
 			    Name:Prashant <br>
 			    Age: 23		
